--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,7 @@ h1 {
 }
 
 :root {
-  --color-bg: #070712;
+  --color-bg: #201d19;
   --color-bg-variant: #181818;
   --color-primary: #4db5ff;
   --color-white: #fff;
